# sunction_store

./: .gitignore  README.md  pyproject.toml
imperial/: heic.py  lc-berlin.py  lc_berlin.py  lc_berlin_splitted.xlsx  link_checker.py  main.py  sku.py  Наличие склада на 16.01.2024 .xlsx
sunction_store/: links_collector.py  main.py  sizes.py
tests/: test_different.py
