[tool.poetry]
name = "imperial"
version = "0.1.0"
description = ""
authors = ["Nikita Savin <klaster26@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
pandas = "^2.2.2"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79